update & search facility

--- a/case-study/furama/src/main/resources/templates/common/common.html
+++ b/case-study/furama/src/main/resources/templates/common/common.html
@@ -32,17 +32,13 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link  fw-bold" href="/service" tabindex="-1" aria-disabled="true">Service</a>
+                            <a class="nav-link  fw-bold" href="/facility" tabindex="-1" aria-disabled="true">Facility</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link  fw-bold" href="/contract" tabindex="-1" aria-disabled="true">Contract</a>
                         </li>
                     </ul>
-                    <form class="d-flex ">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                     <div>
                         <a href="">Nguyễn Trần Thảo Nhiên</a>
                     </div>
