--- a/case-study/furama/src/main/resources/templates/customer/update.html
+++ b/case-study/furama/src/main/resources/templates/customer/update.html
@@ -2,25 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update Customer</title>
+    <title>Add Customer</title>
     <th:block th:replace="~{common/common::css}"></th:block>
 </head>
 <body>
 <!--navbar-->
 <div th:replace="~{common/common::navbar}"></div>
-
-<h1 class="bg-light text-warning text-center">UPDATE CUSTOMER</h1>
+<h1 class="bg-light text-success text-center">ADD CUSTOMER</h1>
 
 <div class="container">
     <div class="col-md-4">
         <a class="btn btn-primary" href="/customer">Return</a>
     </div>
     <div class="d-flex justify-content-center">
-        <form action="/customer/update" method="post" class="w-75 p-5 shadow-lg text-warning" th:object="${customer}">
+        <form action="/customer/add" method="post" class="w-75 p-5 shadow-lg text-success" th:object="${customer}">
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <input type="hidden" th:field="*{customerId}">
                         <label class="form-label">Select customer type</label>
                         <select th:field="*{customerType}" class="form-control">
                             <option th:each="customerType:${customerTypeList}"
@@ -31,8 +29,8 @@
                     </div>
                     <div class="mb-3">
                         <label for="customerName" class="form-label">Name</label>
-                        <input type="text" class="form-control" placeholder="Enter Name"
-                               id="customerName" th:field="*{customerName}">
+                        <input type="text" class="form-control" placeholder="Enter Name" required id="customerName"
+                               th:field="*{customerName}">
                     </div>
                     <div class="mb-3">
                         <label for="birthday" class="form-label">Birthday</label>
@@ -49,28 +47,28 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="idCard" class="form-label">ID Card</label>
-                        <input type="text" class="form-control" placeholder="Enter Id card" id="idCard" th:field="*{idCard}">
+                        <input type="text" class="form-control" placeholder="Enter Id card" id="idCard" required th:field="*{idCard}">
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label">Phone</label>
-                        <input type="text" class="form-control" placeholder="Enter phone" id="phone" th:field="*{phoneNumber}">
+                        <input type="text" class="form-control" placeholder="Enter phone" id="phone" required th:field="*{phoneNumber}">
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" placeholder="Enter email" id="email" th:field="*{email}">
+                        <input type="text" class="form-control" placeholder="Enter email" id="email" required th:field="*{email}">
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" placeholder="Enter address" id="address" th:field="*{address}">
+                        <input type="text" class="form-control" placeholder="Enter address" id="address" required th:field="*{address}">
                     </div>
                 </div>
             </div>
             <button class="btn btn-primary" type="reset">Clear</button>
-            <button type="submit" class="btn btn-warning">Update</button>
+            <button type="submit" class="btn btn-success">Add</button>
         </form>
     </div>
 </div>
-</div>
+
 
 <!--Footer-->
 <footer th:replace="~{common/common::footer}"></footer>
