--- a/case-study/furama - Copy/src/main/resources/templates/facility/add.html
+++ b/case-study/furama - Copy/src/main/resources/templates/facility/add.html
@@ -140,9 +140,9 @@
                 divTieuChuanPhong.style.display = "none"
                 divTienNghiKhac.style.display = "none"
                 divDienTichHoBoi.style.display = "none"
-                document.getElementById("dienTichHoBoi").value = 0;
+                document.getElementById("dienTichHoBoi").value = "";
                 divSoTang.style.display = "none"
-                document.getElementById("soTang").value = 0;
+                document.getElementById("soTang").value = "";
                 divDichVuMienPhi.style.display = "block"
                 document.getElementById("add").disabled = false;
                 console.log(3)
