--- a/case-study/furama - Copy/src/main/resources/templates/common/common.html
+++ b/case-study/furama - Copy/src/main/resources/templates/common/common.html
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
                         <div class="container" style="width: 60px;height: 60px">
-                            <a class="navbar-brand" href="">
+                            <a class="navbar-brand" href="/">
                                 <img class="img-fluid"
                                      src="https://furamavietnam.com/wp-content/uploads/2018/08/logo@2x.png" alt="">
                             </a>
