--- a/case-study/furama - Copy/src/main/resources/templates/contract/list.html
+++ b/case-study/furama - Copy/src/main/resources/templates/contract/list.html
@@ -10,6 +10,9 @@
 <div th:replace="~{common/common::navbar}"></div>
 <div style="height: 150px;"></div>
 <div class="container mt-5 mb-5">
+    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addContract">
+        Thêm hợp đồng
+    </button>
     <table id="listContract" class="table table-hover table-bordered">
         <thead class="bg-danger text-white fw-bold text-center">
         <tr>
@@ -34,7 +37,9 @@
             <td th:text="${contract.getTotal()}"></td>
             <td>
                 <div class="d-flex justify-content-around">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addContract">
+                    <button type="button" class="btn btn-primary"
+                            th:onclick="|getIdContract(${contract.getId()})|"
+                            data-bs-toggle="modal" data-bs-target="#addAF">
                         +
                     </button>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#listService"
@@ -50,7 +55,6 @@
 </div>
 
 <!--phân trang-->
-
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         <li class="page-item"><a class="page-link" th:href="@{contract(page=0)}">First</a></li>
@@ -62,8 +66,55 @@
                                  th:if="${contractPageList.hasNext()}">Next</a></li>
         <li class="page-item"><a class="page-link"
                                  th:href="@{contract(page=${contractPageList.totalPages - 1})}">Last</a></li>
+        <li class="page-item disabled">
+            <span class="page-link">
+                <span th:text="${contractPageList.number+1}"></span>
+                /
+                <span th:text="${contractPageList.totalPages}"></span>
+
+            </span>
+        </li>
     </ul>
 </nav>
+
+<!--Modal thêm dịch vụ đi kèm-->addAF
+<div class="modal" id="addAF">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Thêm dịch vụ đi kèm</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <form action="contract/addAF">
+            <!-- Modal body -->
+                <input type="hidden" id="idContract" name="idContract">
+            <div class="modal-body">
+                <label class="form-label" for="attachID">Chọn dịch vụ đi kèm muốn thêm</label>
+                <div class="mb-3">
+                    <select class="form-control" name="attachID" id="attachID">
+                        <option th:each="attach:${attachList}"
+                                th:value="${attach.attach_facility_id}"
+                                th:text="${attach.attach_facility_name}">
+                        </option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="quantity" class="form-label">Nhập số lượng</label>
+                    <input type="text" id="quantity" name="quantity" class="form-control"></div>
+                </div>
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Thoát</button>
+                <button type="submit" class="btn btn-success" data-bs-dismiss="modal">Thêm</button>
+            </div>
+            </form>
+
+        </div>
+    </div>
+</div>
+
 <!--modal add contract-->
 <div class="modal" id="addContract">
     <div class="modal-dialog">
@@ -74,64 +125,70 @@
                 <h4 class="modal-title">ADD CONTRACT</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-
-            <form action="">
+            <form action="/contract/add" method="post" th:object="${newContract}">
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form action="/action_page.php">
-                        <div class="mb-3 mt-3">
-                            <label for="startDate" class="form-label">Chọn ngày bắt đầu:</label>
-                            <input type="date" class="form-control" id="startDate" name="startDate">
-                        </div>
-                        <div class="mb-3 mt-3">
-                            <label for="endDate" class="form-label">Chọn ngày kết thúc:</label>
-                            <input type="date" class="form-control" id="endDate" name="endDate">
-                        </div>
-                        <div class="mb-3">
-                            <label for="moneySend" class="form-label">Nhập Tiền gửi:</label>
-                            <input type="text" class="form-control" id="moneySend" placeholder="Nhập Tiền gửi"
-                                   name="moneySend">
-                        </div>
-                        <div class="mb-3">
-                            <label for="totalMoney" class="form-label">Tổng tiền</label>
-                            <input type="number" class="form-control bg-secondary" readonly id="totalMoney"
-                                   name="totalMoney">
-                        </div>
+                    <div class="mb-3 mt-3">
+                        <label for="startDate" class="form-label">Chọn ngày bắt đầu:</label>
+                        <input type="date" class="form-control" id="startDate" th:field="*{startDate}">
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="endDate" class="form-label">Chọn ngày kết thúc:</label>
+                        <input type="date" class="form-control" id="endDate" th:field="*{endDate}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="moneySend" class="form-label">Nhập Tiền đặt cọc:</label>
+                        <input type="text" class="form-control" id="moneySend" placeholder="Nhập Tiền gửi"
+                               th:field="*{deposit}">
+                    </div>
+                    <!--                        <div class="mb-3">-->
+                    <!--                            <label for="totalMoney" class="form-label">Tổng tiền</label>-->
+                    <!--                            <input type="number" class="form-control bg-secondary" readonly id="totalMoney">-->
+                    <!--                            &lt;!&ndash;                                   name="totalMoney">&ndash;&gt;-->
+                    <!--                        </div>-->
+                    <div>
+                        <label for="customer" class="form-label">Khách hàng thuê dịch vụ</label>
+                        <select id="customer" class="form-control" th:field="*{customer}">
+                            <option value="">Chọn khách hàng</option>
+                            <option th:each="customer:${customerList}"
+                                    th:value="${customer.customerId}"
+                                    th:text="${customer.customerName}"></option>
+                        </select>
+                    </div>
 
-                        <div>
-                            <label for="totalMoney" class="form-label">Khách hàng thuê dịch vụ</label>
-                            <select name="customer" id="customer" class="form-control">
-                                <option value="">Chọn khách hàng</option>
-                                <option value="">Option1</option>
-                                <option value="">Option2</option>
-                                <option value="">Option3</option>
-                            </select>
-                        </div>
-
-                        <div>
-                            <label for="service" class="form-label">Dịch vụ</label>
-                            <select name="service" id="service" class="form-control">
-                                <option value="">Chọn dịch vụ</option>
-                                <option value="">Option1</option>
-                                <option value="">Option2</option>
-                                <option value="">Option3</option>
-                            </select>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Dịch vụ đính kèm</label>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#listService">
-                                +
-                            </button>
-                        </div>
-                    </form>
+                    <div>
+                        <label for="employee" class="form-label">Nhân viên làm hợp đồng</label>
+                        <select id="employee" class="form-control" th:field="*{employee}">
+                            <option value="">Chọn Nhân viên</option>
+                            <option th:each="employee:${employeeList}"
+                                    th:value="${employee.employeeId}"
+                                    th:text="${employee.employeeName}"></option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="service" class="form-label">Dịch vụ</label>
+                        <select
+                                id="service" class="form-control" th:field="*{facility}">
+                            <option value="">Chọn dịch vụ</option>
+                            <option th:each="facility:${facilityList}"
+                                    th:value="${facility.facilityId}"
+                                    th:text="${facility.facilityName}">
+                            </option>
+                        </select>
+                    </div>
+                    <!--                        <div class="mb-3">-->
+                    <!--                            <label class="form-label">Dịch vụ đính kèm</label>-->
+                    <!--                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"-->
+                    <!--                                    data-bs-target="#listService">-->
+                    <!--                                +-->
+                    <!--                            </button>-->
+                    <!--                        </div>-->
                 </div>
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">ADD</button>
+                    <button type="submit" class="btn btn-success" data-bs-dismiss="modal">ADD</button>
                 </div>
             </form>
 
@@ -166,8 +223,8 @@
                     </thead>
                     <tbody id="AFBody">
                     </tbody>
-
                 </table>
+                <p id="total"></p>
             </div>
 
             <!-- Modal footer -->
@@ -179,11 +236,13 @@
     </div>
 </div>
 
+<input type="hidden" id="messAction" th:value="${mess}" th:if="${mess!=null}">
 <!--Footer-->
 <footer th:replace="~{common/common::footer}"></footer>
 <script th:replace="~{common/common::js}"></script>
 <script src="/js/jquery-3.6.1.min.js"></script>
 <script>
+<!--    Hàm hiển thị danh sách đi kèm của từng hợp đồng-->
     function showAF(id) {
         $.ajax({
             headers: {
@@ -196,25 +255,36 @@
             success: function (attachFacilityList) {
                 console.log(attachFacilityList);
                 let htmlStr = "";
+                let total = 0;
                 if (attachFacilityList != null) {
                     for (let i = 0; i < attachFacilityList.length; i++) {
+                        total += attachFacilityList[i].price;
                         htmlStr += `<tr>
                             <td>${i + 1}</td>
                             <td>${attachFacilityList[i].attach_facility_name}</td>
                             <td>${attachFacilityList[i].price}</td>
                             <td>${attachFacilityList[i].unit}</td>
                             <td>${attachFacilityList[i].status}</td>
-                            </tr> `
+                            </tr>`
                     }
                 }
-                $('#AFBody').html(htmlStr)
+                $('#AFBody').html(htmlStr);
+                if (total != 0) {
+                    $('#total').html("Tổng tiền dịch vụ đi kèm là : " + total + ' đồng')
+                } else {
+                    $('#total').html("");
+                }
             },
             error: function (resultError) {
                 alert('error');
             }
         });
-    }
+        }
 
+//        Hàm gửi idcontract để thêm dịch vụ đi kèm
+    function getIdContract(id) {
+        $('#idContract').val(id);
+    }
 </script>
 </body>
 </html>
